--- a/package.json
+++ b/package.json
@@ -11,14 +11,38 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.1.0",
+    "@angular/cdk": "^13.1.1",
     "@angular/common": "~13.1.0",
     "@angular/compiler": "~13.1.0",
     "@angular/core": "~13.1.0",
     "@angular/forms": "~13.1.0",
+    "@angular/localize": "~13.1.0",
+    "@angular/material": "^13.1.1",
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "@progress/kendo-angular-buttons": "^6.4.1",
+    "@progress/kendo-angular-common": "^2.0.2",
+    "@progress/kendo-angular-dateinputs": "^5.3.0",
+    "@progress/kendo-angular-dropdowns": "^5.5.1",
+    "@progress/kendo-angular-excel-export": "^4.0.2",
+    "@progress/kendo-angular-grid": "^5.5.1",
+    "@progress/kendo-angular-inputs": "^7.5.2",
+    "@progress/kendo-angular-intl": "^3.1.2",
+    "@progress/kendo-angular-l10n": "^3.0.3",
+    "@progress/kendo-angular-label": "^3.1.1",
+    "@progress/kendo-angular-pdf-export": "^3.0.2",
+    "@progress/kendo-angular-popup": "^4.0.2",
+    "@progress/kendo-angular-treeview": "^5.4.3",
+    "@progress/kendo-data-query": "^1.5.5",
+    "@progress/kendo-drawing": "^1.16.0",
+    "@progress/kendo-licensing": "^1.2.1",
+    "@progress/kendo-theme-default": "^4.43.0",
+    "bootstrap": "^5.1.3",
+    "jquery": "^3.6.0",
+    "ngx-bootstrap": "^7.1.0",
     "rxjs": "~7.4.0",
+    "save": "^2.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
@@ -27,6 +51,7 @@
     "@angular/cli": "~13.1.1",
     "@angular/compiler-cli": "~13.1.0",
     "@types/jasmine": "~3.10.0",
+    "@types/jquery": "^3.5.10",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.10.0",
     "karma": "~6.3.0",
